# lucy-multi-agent

./: .env.example  .gitignore  DEPLOYMENT.md  GITHUB_DEPLOYMENT.md  README.md  STREAMLIT_DEPLOYMENT.md  crew.py  crewai.yaml  crewai_cloud_lucy.py  demo.py  fixed_lucy.py  pyproject.toml  requirements.txt  simple_lucy.py  streamlit_app.py  test_build.py  test_deployment.py  test_lucy.py
langchain_lucy/: README.md  app.py  index.html  lucy_ai.py  railway.toml  requirements.txt  test_lucy.py
src/: __init__.py  config.py  crew.py
src/config/: __init__.py  config.py  crew.py  main.py  tasks.yaml
src/config/config/: __init__.py  crew.py  crew_config.py
src/lucy_multi_agent/: __init__.py  crew.py  main.py
src/lucy_multi_agent/config/: agents.yaml  tasks.yaml
