[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucy-multi-agent"
version = "0.1.0"
description = "Lucy - AI Loan Officer & Business Partner with multi-agent workflow"
authors = [{name = "William Kendall"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==0.5.0",
    "langchain==0.1.0",
    "langchain-core==0.1.23",
    "langchain-community==0.0.20",
    "langchain-anthropic==0.3.18",
    "langchain-openai==0.0.2.post1",
    "langchain-google-genai==2.1.8",
    "openai==1.98.0",
    "anthropic==0.60.0",
    "google-ai-generativelanguage==0.6.18",
    "python-dotenv==1.1.1",
    "langfuse==3.2.1",
    "pydantic==2.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
