[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucy-multi-agent"
version = "0.1.0"
description = "Lucy - AI Loan Officer & Business Partner with multi-agent workflow"
authors = [{name = "William Kendall"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
